<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter"
    tools:context=".activity.PatternDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pattern_details_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/pattern_details_title"
                android:textColor="@color/darker"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pattern_details_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pattern_desc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pattern_materials"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pattern_details_materials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pattern_desc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pattern_instructions"
                android:textColor="@color/darker"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pattern_details_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pattern_details"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/pattern_details_img"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="46dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="80dp"
                android:contentDescription="@string/pattern_image_desc"
                app:srcCompat="@drawable/image2" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>